<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.challenge.theScore.core.data.Player" />

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@android:color/white"
        android:elevation="3dp"
        card_view:cardCornerRadius="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_item_click"
            android:layout_width="match_parent"
            android:padding="@dimen/padding_10dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/titleFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/tvFirstName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvFirstName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{item.firstName}"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/titleFirstName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/titleFirstName"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/titleLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/tvLastName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleFirstName" />

            <TextView
                android:id="@+id/tvLastName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{item.lastName}"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/titleLastName"
                app:layout_constraintStart_toEndOf="@+id/titleLastName"
                app:layout_constraintTop_toBottomOf="@+id/tvFirstName" />


            <TextView
                android:id="@+id/titlePosition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/position"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tvPosition"
                app:layout_constraintTop_toBottomOf="@+id/titleLastName"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPosition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{item.position}"
                app:layout_constraintBaseline_toBaselineOf="@+id/titlePosition"
                app:layout_constraintStart_toEndOf="@+id/titlePosition"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLastName"
                android:textColor="@android:color/black"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/titleNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tvNumber"
                app:layout_constraintTop_toBottomOf="@+id/titlePosition"
                android:text="@string/number"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/titleNumber"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/titleNumber"
                app:layout_constraintTop_toBottomOf="@+id/tvPosition"
                android:text="@{Integer.toString(item.number)}"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>