<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools">

    <data>

        <variable
            name="teamModel"
            type="com.challenge.theScore.core.data.TeamsModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_item_click"
        android:layout_width="match_parent"
        android:layout_height="130dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:elevation="3dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            card_view:cardCornerRadius="5dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/padding_10dp">

                <TextView
                    android:id="@+id/titleTeamName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/team_name"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="@dimen/text_size_18sp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvTeamName"
                    app:layout_constraintRight_toLeftOf="@+id/tvTeamName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTeamName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{teamModel.fullName}"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/guideline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/titleTeamName"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvWinsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wins"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvWins"
                    app:layout_constraintEnd_toStartOf="@+id/tvWins"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline" />


                <TextView
                    android:id="@+id/tvWins"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{teamModel.wins,default = 1}"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tvLossesTitle"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toEndOf="@+id/tvWinsTitle"
                    app:layout_constraintTop_toTopOf="@+id/guideline" />

                <TextView
                    android:id="@+id/tvLossesTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/losses"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@+id/tvLosses"
                    app:layout_constraintEnd_toStartOf="@+id/tvLosses"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toEndOf="@+id/tvWins"
                    app:layout_constraintTop_toTopOf="@+id/guideline" />

                <TextView
                    android:id="@+id/tvLosses"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@{teamModel.losses,default = 1}"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toEndOf="@+id/tvLossesTitle"
                    app:layout_constraintTop_toTopOf="@+id/guideline" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="50dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>